--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.3.1",
+    "lucide-react": "^0.263.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "lucide-react": "^0.263.1",
     "react-router-dom": "^6.28.0",
-    "sonner": "^1.4.0"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^5.0.0"
+    "sonner": "^1.4.0",
+    "vite": "^5.4.0"
   }
 }
