--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "react-router-dom": "^6.20.0",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.263.1",
-    "recharts": "^2.10.3"
+    "recharts": "^2.10.3",
+    "vite": "^5.0.8"
+
   },
   "scripts": {
     "dev": "vite",
@@ -16,7 +18,6 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.8"
+    "@vitejs/plugin-react": "^4.2.1"
   }
 }
