--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.263.1",
     "recharts": "^2.10.3",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "@vitejs/plugin-react": "^4.2.1"
 
   },
   "scripts": {
@@ -18,6 +19,6 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.1"
+  
   }
 }
