--- a/package.json
+++ b/package.json
@@ -1,24 +1,22 @@
 {
-  "name": "veroapi-web",
-  "version": "1.0.0",
+  "name": "botghost-template-hub",
+  "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "framer-motion": "^10.16.16",
-    "lucide-react": "^0.263.1",
-    "recharts": "^2.10.3",
-    "vite": "^5.0.8",
-    "@vitejs/plugin-react": "^4.2.1"
-
-  },
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "devDependencies": {
-  
+  "dependencies": {
+    "next": "14.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "prisma": "5.8.0",
+    "@prisma/client": "5.8.0",
+    "next-auth": "5.2.0",
+    "bcryptjs": "2.4.3",
+    "swr": "2.1.0",
+    "tailwindcss": "3.5.0",
+    "axios": "1.4.0"
   }
 }
