--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "bcryptjs": "2.4.3",
     "swr": "2.1.0",
     "tailwindcss": "3.4.17",
-    "axios": "1.4.0"
+    "axios": "1.4.0",
+    "@auth/prisma-adapter": "latest"
   }
 }
+
